NBT/NBT.Web/Assets/client/css/style.css
/* ... */
/*@font-face {
    font-family: "signpainter";
    src: url("/Assets/client/css/fonts/signpainter-housescript-webfont.eot");
    src: url("/Assets/client/css/fonts/signpainter-housescript-webfont.eot?#iefix") format("embedded-opentype"), url("/Assets/client/css/fonts/signpainter-housescript-webfont.svg#signpainter") format("svg"), url("/Assets/client/css/fonts/signpainter-housescript-webfont.woff2") format("woff2"), url("/Assets/client/css/fonts/signpainter-housescript-webfont.woff") format("woff"), url("/Assets/client/css/fonts/signpainter-housescript-webfont.ttf") format("truetype");
    font-weight: normal;
    font-style: normal;
}*/

body {
  font-family: "Roboto", Helvetica, Verdana, sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 14px;
  overflow-x: hidden;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased; }

img {
  max-width: 100%;
  height: auto; }

.nav-side-menu li {
  padding: 0; }
  ul li, .nav-side-menu li li {
    list-style: none; }

textarea {
  height: auto;
  padding-top: 15px; }
input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

input[type="number"] {
    -moz-appearance: textfield;
}
body a:focus,
body a:hover {
  outline: medium none transparent;
  text-decoration: none; }

h1, h2, h3, h4, h5, h6 {
  font-family: "Roboto", Helvetica, Verdana, sans-serif;
  font-weight: 400; }

h1 {
  font-size: 4rem; }

h2 {
  font-size: 3rem; }

h3 {
  font-size: 2rem; }

h4 {
  font-size: 1.5rem; }

h5 {
  font-size: 1rem; }

h6 {
  font-size: 0.75rem; }

a {
  color: #1f2a37; }
  a:hover, a:focus, a.active {
    color: #94da46;
    color: inherit;
    text-decoration: none;
    outline: none; }

.btn.active.focus,
.btn.active:focus,
.btn.focus,
.btn.focus:active,
.btn:active:focus,
.btn:focus {
  outline: none;
  color: inherit;
  -webkit-box-shadow: none;
          box-shadow: none; }

::-moz-selection {
  color: #ffffff;
  background-color: #94da46; }

::selection {
  color: #ffffff;
  background-color: #94da46; }

::-moz-selection {
  color: #ffffff;
  background-color: #94da46; }

a {
  color: inherit;
  text-decoration: none;
  outline: none; }

input,
textarea,
button,
select {
  outline: none; }

.div-box {
  display: inline-block;
  width: 100%;
  float: left; }

.mt {
  margin-top: 45px; }

.mb {
  margin-bottom: 45px; }

.mb20 {
  margin-bottom: 20px; }

.mt20 {
  margin-top: 20px; }

.mb45 {
  margin-bottom: 45px; }

.cbt {
  padding-left: 0px;
  padding-right: 0px; }

.cpl {
  padding-left: 7px;
  padding-right: 0px; }

.cpr {
  padding-right: 7px;
  padding-left: 0px; }

.rm-pd {
  padding-left: 0px !important;
  padding-right: 0px !important; }

.title-style .title-right, .title-style .title-left {
    display: inline-block;
    font-family: 'Itim', cursive;
    font-weight: 700;
    text-transform: uppercase;
    font-weight: 700;
}

.title-style .title-left {
  color: #6ebb43;
  padding-bottom: 3px;
  margin-right: 15px; }

.title-style .desc {
  display: block;
  font-size: 1rem;
  width: 100%;
  margin-top: 0px; }

#map {
  height: 600px;
  width: 100%; }

/*==========  Non-Mobile First Method  ==========*/
/* Large Devices, Wide Screens */

/* Medium Devices, Desktops */

/* Small Devices, Tablets */

/* Small Devices, Phones */
/* Extra Small Devices, Phones */

/* Custom, iPhone Retina */

/* --------------------------------------------------------------------- */
/* HEADER
/* --------------------------------------------------------------------- */
.button {
  background-color: transparent;
  border: 2px solid #6ebb43;
  border-radius: 5px;
  padding: 15px 40px;
  font-size: 1rem;
  font-weight: 700; }
  .button:hover {
    color: #fff;
    border-color: #6ebb43; }

.btn-container .sweep-to-right {
  position: relative;
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s; }
  .btn-container .sweep-to-right:before {
    content: "";
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: #6ebb43;
    -webkit-transform: scaleX(0);
    transform: scaleX(0);
    -webkit-transform-origin: 0 50%;
    transform-origin: 0 50%;
    -webkit-transition-property: transform;
    -webkit-transition-property: -webkit-transform;
    transition-property: -webkit-transform;
    transition-property: transform;
    transition-property: transform, -webkit-transform;
    -webkit-transition: 300ms ease-out;
    transition: 300ms ease-out; }

.btn-container .sweep-to-right:hover:before {
  -webkit-transform: scaleX(1);
  transform: scaleX(1); }

.header-style-1 {
  width: 100%;
  background-color: rgba(72, 72, 72, 0.61);
  z-index: 100;
  position: absolute; }

.header-style-2 {
  width: 100%;
  background-color: rgba(0, 0, 0, 0.8); }

.top-bar {
  background-color: #1F2A37;
  color: #fff;
  padding: 12px 0;
  font-size: 0.75rem; }
  .top-bar .top-bar-left {
    text-align: left; }
  .top-bar .top-bar-right {
    text-align: right; }

.header-top {
  padding: 20px 0; }

.header-logo {
  width: 100px; }

.header-slogan {
  font-size: 2rem;
  font-weight: 700;
  color: #1d9a0a;
  text-transform: uppercase; }
  .header-slogan .slogan {
    font-size: 0.75rem;
    color: #fff;
    text-transform: capitalize;
    display: block;
    line-height: 0;
    font-family: 'Itim', cursive; }

.mobile-menu {
  display: none; }

.main-nav-wrapper {
  overflow: auto;
  margin: 15px 0; }
  .main-nav-wrapper .main-nav > ul.nav, .main-nav-wrapper .nav-side-menu .main-nav > li.nav, .nav-side-menu .main-nav-wrapper .main-nav > li.nav {
    display: inline-block;
    padding-left: 0; }
/* ... */

